Fixes required for port from master branch
* CacheTeiidImpl
 * If a template is problematic, eg. salesforce-34, then avoid bringing
   down whole app by logging the error message rather than throwing the
   exception.

* message.properties
 * Adds the cause exception message to the error message

* IT_KomodoTeiidServiceDriverTests
 * The hashmap is in a random order so cannot guarantee the status message
   if first in the iterator so check all the response attributes to ensure
   expected message is available

* AbstractKomodoServiceTest
 * Unit tests using undertow require apache base64 as undertow client and
   service use that implementation, whereas javascript implementation uses
   implementation akin to DatatypeConverter and jdk8 Base64.